cursive-bootstrap/tests/ui/E-SEM/E-SEM-2731.cursive
// RUN: compile-fail
// DIAG: E-SEM-2731
// SPEC: 8.17
// DESC: Record pattern references non-existent field

record Point {
    x: i32
    y: i32
}

procedure bad_pattern(p: Point) -> i32 {
    return match p {
        Point { x, z } => { x }  //~ ERROR E-SEM-2731: unknown field in pattern
    }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
